# company_intel

./: .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  dotnet-tools.json  pyproject.toml
.claude/: settings.json
.claude/agents/: tech-dependency-assistant.md
.claude/rules/: aspire.md  python-best-practices.md
.claude/skills/quality-gates/: SKILL.md
.github/workflows/: ci.yml  marp-pages.yml
docs/: CLAUDE.md  SPEC.md  constraints.md  data-strategy.md  drivers.md  requirements.md  roadmap.md  vnext.md
docs/_draft/: ASPIRE_SETUP.md  OPEN_QUESTIONS.md  SETUP_REQUIREMENTS.md
docs/implementation/: chunking-embedding.md  retrieval.md  scraper.md
docs/misc/: chromadb-vs-qdrant-hybrid-search.md  critique.md  research.md
docs/tradeoffs/: 01-scraping.md  02-text-processing.md  03-embeddings.md  04-vector-store.md  05-embedding-runtime.md  05-retrieval.md  06-llm-inference.md  07-ui.md
scripts/: run-eval.sh
slides/: presentation.md
slides/themes/: theme.css
src/AppHost/: AppHost.csproj  Program.cs
src/AppHost/Properties/: launchSettings.json
src/agent/: main.py  pyproject.toml
src/agent/agent/: __init__.py  app.py  backoffice.py  eval.py  settings.py  telemetry.py
src/agent/agent/chunker/: __init__.py  config.py  models.py  pipeline.py
src/agent/agent/embedder/: __init__.py  config.py  pipeline.py
src/agent/agent/ingestion/: __init__.py  models.py  pipeline.py
src/agent/agent/scraper/: __init__.py  _compat.py  cleaner.py  config.py  crawl.py  metrics.py  models.py  pipeline.py  storage.py
src/agent/agent/vectorstore/: __init__.py  client.py  config.py
src/agent/tests/golden/: paypal.json
src/agent/tests/golden/paypal/raw/: search_001.md  search_002.md  search_003.md  search_004.md  search_005.md  search_006.md  search_007.md  website_001.md  website_002.md  website_003.md  website_004.md  wikipedia_001.md  wikipedia_002.md  wikipedia_003.md
src/ui/: package.json  pnpm-lock.yaml
src/ui/src/: instrumentation.ts
tests/AppHost.Tests/: AgentHealthTests.cs  AppHost.Tests.csproj  RetrievalEvalTests.cs
(+11 files in other folders)
